Task creation API

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -21,6 +21,11 @@
 
 <script>
   $(function() {
+     $('new-form').submit(function(event) {
+        event.preventDefault();
+        var textbox = $('.new-todo');
+        console.log("Task: ", textbox.val());
+     });
     // The taskHtml method takes in a JavaScript representation
    // of the task and produces an HTML representation using
    // <li> tags
@@ -45,7 +50,7 @@
 
 
      var doneValue = Boolean($(e.target).is(':checked'));
-  
+
 
      $.post("/tasks/" + itemId, {
        _method: "PUT",
